updated and styled the index page (english and dutch)

--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
 .options-content {
     display:none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: rgba(240, 248, 255, 0.875);
     min-width:100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
+    -webkit-box-shadow:0px 0px 27px 10px rgba(255,255,255,0.9);
+    -moz-box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
 }
 
 .options:hover .options-content {
@@ -33,6 +36,7 @@
 .options-icon {
     width: 30px;
     height: 30px;
+    
 }
 
 .language-icon {
@@ -41,3 +45,158 @@
 }
 
 /* End of Dropdown Menu Styles */
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background-color:black;
+background-image:
+radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+}
+
+h1 {
+    text-align: center;
+    color: rgba(240, 248, 255, 0.875);
+    text-shadow: rgba(255,255,255,0.62) 0px 0px 10px;
+    padding-bottom: 50px;
+}
+
+.intro {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background-color: rgba(240, 248, 255, 0.875);
+    -webkit-box-shadow:0px 0px 27px 10px rgba(255,255,255,0.9);
+    -moz-box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    border-radius: 10px;
+}
+
+.intro p {
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    color: #333333;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+}
+
+.intro h3 {
+    text-align: center;
+    color: #333333;
+    padding-top: 15px;;
+}
+
+.skills {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background-color: rgba(240, 248, 255, 0.875);
+    -webkit-box-shadow:0px 0px 27px 10px rgba(255,255,255,0.9);
+    -moz-box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    border-radius: 10px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.skills h3 {
+    text-align: center;
+    color: #333333;
+    padding-top: 15px;
+    padding-bottom: 20px;
+}
+
+.skill-icon {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+}
+
+progress {
+    width: 80%;
+    height: 20px;
+    margin-bottom: 20px;
+}
+
+#myBtn {
+    position: fixed;
+    bottom: 10px;
+    float: right;
+    right: 10px;
+    left: auto;
+    max-width: 40px;
+    height: 40px;
+    width: 100%;
+    color: white;
+    padding: .5px;
+    border-radius: 4px;
+    display: none;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+.certificates {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background-color: rgba(240, 248, 255, 0.875);
+    -webkit-box-shadow:0px 0px 27px 10px rgba(255,255,255,0.9);
+    -moz-box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    border-radius: 10px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.certificates h3 {
+    text-align: center;
+    color: #333333;
+    padding-top: 15px;
+    padding-bottom: 20px;
+}
+
+.certificate-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.certificate-item img {
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 70%;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+certificates-desc {
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    color: #333333;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+}
+
+b {
+    padding-bottom: 20px;
+}
