--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .options {
     position: relative;
-    width:100px;;
+    width:100px;
 }
 
 .options-content {
@@ -36,7 +36,7 @@
 .options-icon {
     width: 30px;
     height: 30px;
-    border-radius: 0px;;
+    border-radius: 0px;
 }
 
 .language-icon {
@@ -64,6 +64,7 @@ h1 {
     color: rgba(240, 248, 255, 0.875);
     text-shadow: rgba(255,255,255,0.62) 0px 0px 10px;
     padding-bottom: 50px;
+    font-size: 50px;
 }
 
 .intro {
@@ -166,8 +167,7 @@ html {
 
 .certificates h3 {
     text-align: center;
-    color: #333333;
-    padding-top: 15px;
+    color: #212121;
     padding-bottom: 20px;
 }
 
@@ -187,16 +187,6 @@ html {
     align-items: center;
 }
 
-certificates-desc {
-    font-size: 18px;
-    line-height: 1.6;
-    text-align: center;
-    color: #333333;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 20px;
-}
-
 b {
     padding-bottom: 20px;
 }
@@ -205,8 +195,8 @@ b {
     display:flexbox;
     justify-content: center;
     align-items: center;
-    margin: 20px;
-    padding: 20px;
+    margin-top: 70px;
+    margin-bottom: 30px;
     font-size: 20px;
     text-align: center;
     text-shadow: #3f3e0a 2px 2px 5px;
@@ -218,6 +208,23 @@ b {
     -webkit-box-shadow:0px 0px 27px 10px rgba(255,255,255,0.9);
     -moz-box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+}
+
+.project-item h2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 30px;
+    color: #1c1c1c;
+}
+
+.certificate-item p {
+    padding-bottom: 20px;
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    color: #161616;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #overlay {
@@ -267,4 +274,44 @@ iframe {
     input[type=text], select, textarea {
         width: 100%;
     }
+}
+
+.info-content {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background-color: rgba(240, 248, 255, 0.875);
+    -webkit-box-shadow:0px 0px 27px 10px rgba(255,255,255,0.9);
+    -moz-box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 27px 10px rgba(255,255,255,0.9);
+    border-radius: 10px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    text-align: center;
+    padding: 20px;
+}
+
+.info-content b {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: large;
+}
+
+.info-content p {
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    color: #333333;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+}
+
+.info-content h2 {
+    text-align: center;
+    color: #333333;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    font-size: 30px;
 }
